Create Docker image for solver

--- a/native_algo/CMakeLists.txt
+++ b/native_algo/CMakeLists.txt
@@ -8,20 +8,20 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 find_package(GALIB REQUIRED)
 
 # Variables with source files
-file(GLOB_RECURSE COMMON_SRC "${CMAKE_CURRENT_SOURCE_DIR}/cutting_stock_problem_solver/src/*.cpp")
-file(GLOB SOLVER_SRC "${CMAKE_CURRENT_SOURCE_DIR}/cutting_stock_problem_solver/main/Solver.cpp")
-file(GLOB GENOME_TESTER_SRC "${CMAKE_CURRENT_SOURCE_DIR}/cutting_stock_problem_solver/main/CompositeGenomeTesterMain.cpp")
+file(GLOB_RECURSE COMMON_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+file(GLOB SOLVER_SRC "${CMAKE_CURRENT_SOURCE_DIR}/main/Solver.cpp")
+file(GLOB GENOME_TESTER_SRC "${CMAKE_CURRENT_SOURCE_DIR}/main/CompositeGenomeTesterMain.cpp")
 
 # Move input file and plotting script to build directory
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/input/maleplyty.txt" "${CMAKE_CURRENT_BINARY_DIR}/maleplyty.txt" COPYONLY)
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/scripts/results_drawer.py" "${CMAKE_CURRENT_BINARY_DIR}/results_drawer.py" COPYONLY)
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/results_drawer.py" "${CMAKE_CURRENT_BINARY_DIR}/results_drawer.py" COPYONLY)
 
 # Main app - genetic solver
 set(SOLVER_ALL_FILES "${COMMON_SRC}" "${SOLVER_SRC}")
 add_executable(Solver "${SOLVER_ALL_FILES}")
 target_link_libraries(Solver "${GALIB_LIBRARIES}")
 target_include_directories(Solver PRIVATE 
-    "${CMAKE_CURRENT_SOURCE_DIR}/cutting_stock_problem_solver/include"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include"
     "${GALIB_INCLUDE_DIR}")
 
 # Composite genome tester app
@@ -29,5 +29,5 @@ set(GENOME_TESTER_ALL_FILES "${COMMON_SRC}" "${GENOME_TESTER_SRC}")
 add_executable(GenomeTester "${GENOME_TESTER_ALL_FILES}")
 target_link_libraries(GenomeTester "${GALIB_LIBRARIES}")
 target_include_directories(GenomeTester PRIVATE
-    "${CMAKE_CURRENT_SOURCE_DIR}/cutting_stock_problem_solver/include"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include"
     "${GALIB_INCLUDE_DIR}")
